Modificata configurazione recorder

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -18,7 +18,16 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 
 recorder:
-  purge_keep_days: 30
+  purge_keep_days: 365
+  include:
+    entities:
+      - sensor.28_041685abbeff_temperature
+      - sensor.cpu_temperature 
+      - sensor.disk_use_percent_mnt_drive
+      - sensor.memory_use_percent
+      - sensor.db_size
+      - sensor.load_5m
+      - climate.caldaia
 
 input_datetime:
   interval1_start:
