--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,7 +11,7 @@ tts:
   - platform: google_translate
 
 group: !include groups.yaml
-sensor: !include sensors.yaml
+sensor: !include_dir_merge_list sensors/
 binary_sensor: !include binary_sensors.yaml
 switch: !include switches.yaml
 automation: !include_dir_merge_list automations/
